--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <body>
       <h1>Awesome Header</h1>
-    Hello there, awesome person! 
+<img src="https://avatars1.githubusercontent.com/u/70238402?v=4">
+
   </body>
 
 </html>
