--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       <h1>Awesome Header</h1>
 <img src="https://avatars1.githubusercontent.com/u/70238402?v=4">
 
+      <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
+      
   </body>
 
 </html>
